--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ],
     "collectCoverageFrom": [
       "!src/services/api.js",
+      "!src/**/styles.js",
       "!src/styles/*.js"
     ],
     "coverageDirectory": "__tests__/coverage"
